--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "antd": "3.0.0-beta.5",
     "classnames": "^2.2.5",
-    "dva": "^2.0.4",
+    "dva": "2.1.0-beta.3",
     "history": "^4.7.2",
     "less": "^2.7.3",
     "lodash": "^4.17.4",
